# plan-buddy

./: .gitignore  DEPLOYMENT_GUIDE.md  Project_Journey_Summary.md  requirements.txt
backend/: README.md  database.py  main.py  models.py  pyproject.toml  schemas.py  security.py
backend/routers/: __init__.py  auth_router.py  calendar_router.py  friend_router.py  mypage_router.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.vue
frontend/src/api/: auth.js  calendar.js  friends.js  mypage.js  post.js
frontend/src/assets/: main.css
frontend/src/components/: EventModal.vue  FriendManagerModal.vue  ProfileCard.vue
frontend/src/router/: index.js
frontend/src/views/: CalendarView.vue  LoginView.vue  MyPageView.vue
